--- a/MPfm/branches/current/MPfm.Mac/Windows/XIB/UpdateLibraryWindow.xib
+++ b/MPfm/branches/current/MPfm.Mac/Windows/XIB/UpdateLibraryWindow.xib
@@ -93,7 +93,7 @@
 													<string>public.url</string>
 												</object>
 											</object>
-											<string key="NSFrameSize">{549, 57}</string>
+											<string key="NSFrameSize">{564, 57}</string>
 											<reference key="NSSuperview" ref="139550380"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="569607521"/>
@@ -114,7 +114,7 @@
 													<nil key="NSDelegate"/>
 												</object>
 												<reference key="NSTextView" ref="877141512"/>
-												<double key="NSWidth">549</double>
+												<double key="NSWidth">564</double>
 												<int key="NSTCFlags">1</int>
 											</object>
 											<object class="NSTextViewSharedData" key="NSSharedData">
@@ -181,12 +181,12 @@
 												<int key="NSPreferredTextFinderStyle">1</int>
 											</object>
 											<int key="NSTVFlags">6</int>
-											<string key="NSMaxSize">{549, 10000000}</string>
+											<string key="NSMaxSize">{564, 10000000}</string>
 											<string key="NSMinize">{223, 57}</string>
 											<nil key="NSDelegate"/>
 										</object>
 									</object>
-									<string key="NSFrame">{{1, 1}, {549, 181}}</string>
+									<string key="NSFrame">{{1, 1}, {564, 181}}</string>
 									<reference key="NSSuperview" ref="308654894"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="877141512"/>
@@ -726,6 +726,8 @@
 					<string>13.IBPluginDependency</string>
 					<string>14.IBPluginDependency</string>
 					<string>15.IBPluginDependency</string>
+					<string>2.IBNSWindowAutoPositionCentersHorizontal</string>
+					<string>2.IBNSWindowAutoPositionCentersVertical</string>
 					<string>2.IBPluginDependency</string>
 					<string>2.IBWindowTemplateEditedContentRect</string>
 					<string>2.NSWindowTemplate.visibleAtLaunch</string>
@@ -753,6 +755,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
+					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{319, 371}, {606, 354}}</string>
 					<boolean value="NO"/>
